Setting .src should reset image animations; don't animate images no one is looking at.  Bug 210001, r=pavlov, sr=jst