layout/base/nsImageLoader.cpp
@@ -141,6 +141,8 @@ NS_IMETHODIMP nsImageLoader::OnStartContainer(imgIRequest *aRequest,
      *   one loop = 2
      */
     aImage->SetAnimationMode(mPresContext->ImageAnimationMode());
+    // Ensure the animation (if any) is started.
+    aImage->StartAnimation();
   }
   return NS_OK;
 }
